--- a/sass/partials/_mixins.scss
+++ b/sass/partials/_mixins.scss
@@ -54,7 +54,7 @@
     background-color: $dark-blue;
     color: $white;
     position: absolute;
-    opacity: 0;
+    display: none;
     max-width: 260px;
     text-align: center;
 }
