--- a/sass/partials/sections/_news.scss
+++ b/sass/partials/sections/_news.scss
@@ -85,7 +85,6 @@
     padding-bottom: 1rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     //Up to Medium
     @media screen and (max-width: $break-m) {
         margin-bottom: 2rem;
@@ -105,18 +104,6 @@
         flex-direction: column;
         justify-content: space-between;
     }
-}
-
-.news-card-main::after {
-    content: '';
-    border-bottom: 1px solid $lightgrey;
-    width: 90%;
-    display: block;
-    margin: 0 auto;
-    // background-image: linear-gradient($lightgrey, $lightgrey);
-    // background-repeat: no-repeat;
-    // background-size: 85% 1px;
-    // background-position: bottom left 2rem;
 }
 
 .card-img-top {
@@ -177,13 +164,6 @@
     }
 }
 
-.card-footer::before {
-    // content: '';
-    // border-top: 1px solid $lightgrey;
-    // width: 90%;
-    // display: block;
-}
-
 .news-body {
     padding: 1rem 1rem;
     @include flexcolumn;
@@ -198,6 +178,10 @@
     font-size: 1rem;
     line-height: 1.5rem;
     font-weight: $semibold;
+    //Extra Large
+    @media screen and (min-width: $break-xl) {
+        height: 47px;
+    }
     &:hover {
         cursor: pointer;
         text-decoration: underline;
@@ -209,26 +193,38 @@
     font-size: .85rem;
     margin-bottom: 1.5rem;
     line-height: 1.375rem;
+    //Extra Large
+    @media screen and (min-width: $break-xl) {
+        height: 66px;
+    }
 }
 
 .news-btn {
     @include button-styles;
-    margin: auto auto 1rem 0;
-    height: auto;
+    margin: 4px auto 3px 0;
     padding: 5px 15px;
     line-height: 35px;
+    // justify-self: flex-end;
 }
 
 //===== CARD FOOTER =====//
 .card-footer {
     display: flex;
-    padding-top: 1.5rem;
+    padding-top: 40px;
     margin: auto auto 1rem 2rem;
+    position: relative;
     img {
         margin-right: 1rem;
         height: auto;
         vertical-align: middle;
         border-radius: 50%;
+    }
+    &::before {
+        content: '';
+        border-bottom: 1px solid $lightgrey;
+        width: 125%;
+        position: absolute;
+        top: 10px;
     }
 }
 
@@ -287,7 +283,7 @@
     }
     //Extra Large
     @media screen and (min-width: $break-xl) {
-        display: initial;
+        display: flex;
     }
 }
 
